[package]
name = "yew-side-effect"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Reconcile Side Effects in Yew Applications"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
keywords = [
    "web",
    "yew",
]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/futursolo/yew-side-effect"

[dependencies]
yew = { version = "0.18.0", default-features = false, features = ["web_sys"] }
yewtil = "0.4.0"
once_cell = "1.8.0"
