[package]
name = "yew-side-effect"
version = "0.1.2"
edition = "2018"
license = "Apache-2.0"
description = "Reconcile Side Effects in Yew Applications"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
keywords = [
    "web",
    "yew",
]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/futursolo/yew-side-effect"

[dependencies]
yew = { git = "https://github.com/yewstack/yew" }
once_cell = "1.8.0"
