[package]
name = "yew-side-effect"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "Reconcile Side Effects in Yew Applications"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
keywords = [
    "web",
    "yew",
]
categories = ["wasm", "web-programming"]
readme = "README.md"
homepage = "https://github.com/futursolo/yew-side-effect"

[dependencies]
yew = "0.19.3"
once_cell = "1.8.0"
gloo-utils = "0.1"
